Fixing non-wrapping text

--- a/styles.css
+++ b/styles.css
@@ -199,4 +199,7 @@ li {
     #create-address-form{
          margin-top: 1rem;
     }
+    .rules-container p {
+    margin-left: 5px;
+    }
 }
